Fixed overflow issue with the help of Jenn, and fixed a small issue with 0s. Can come back and clean code later on, as well as adjusting some other bugs that appear when too many numbers are added.

--- a/style.css
+++ b/style.css
@@ -7,35 +7,36 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 2em;
-    max-width: 20em;
+    max-width: 35em;
+    max-height: 55em;
 }
 #screens {
-    height: 85px;
+    min-height: 95px;
     position: relative;
 }
 #screen {
     margin-left: auto;
     margin-right: auto;
     max-width: 20em;
-    height: 58.8px;
     text-align: right;
     bottom: 0;  
     right: 0;
-    position: absolute;
     font-size: 3em;
     padding-right: 8px;
+    word-break: break-word;
 }
 #smallScreen {
-    height: 25px;
+    min-height: 25px;
     text-align: right;
-    font-size: 20px;;
+    font-size: 20px;
+    word-break: break-word;
 }
 #calcKeys {
     background-color: white;
     display: grid;
     grid-gap: 1.5px;
     grid-template-columns: repeat(4, 3fr);
-    height: 300px;
+    height: 400px;
 }
 .num {
     background-color: white;
